# python-devtools-mcp

./: .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
.codex-plugin/: plugin.json
src/python_devtools/: __init__.py  _cli.py  _core.py  _registry.py  _resolve.py  _server.py  _wrap.py
